--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>金融风京东卡页面</title>
+	<title>团贷网_专业可靠的互联网金融平台</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/index.css?v=201806110201">
 	
@@ -79,19 +79,19 @@
 				<h3 class="novice-welfare-title">新手福利</h3>
 				<div class="row text-center pt10">
 					<div class="col-md-3 col-sm-3 col-xs-3 col-lg-3" id="packet">
-						<img class="icenter-block floatmove" src="../images/welfare1.png" alt="518新手红包">
+						<img class="icenter-block floatmove" src="../images/welfare1.png" alt="518新手红包" title="查看规则">
 						<p class="txt">518新手红包</p>
 					</div>
 					<div class="col-md-3 col-sm-3 col-xs-3 col-lg-3" id="jdcard">
-						<img class="center-block floatmove" src="../images/welfare2.png" alt="800元京东卡">
+						<img class="center-block floatmove" src="../images/welfare2.png" alt="800元京东卡" title="查看规则">
 						<p class="txt">800元京东卡</p>
 					</div>
 					<div class="col-md-3 col-sm-3 col-xs-3 col-lg-3" id="bbin">
-						<img class="center-block floatmove" src="../images/welfare3.png" alt="2888元体验金">
+						<img class="center-block floatmove" src="../images/welfare3.png" alt="2888元体验金" title="查看规则">
 						<p class="txt">2888元体验金</p>
 					</div>
 					<div class="col-md-3 col-sm-3 col-xs-3 col-lg-3" id="member">
-						<img class="center-block floatmove" src="../images/welfare4.png" alt="1个月超级会员">
+						<img class="center-block floatmove" src="../images/welfare4.png" alt="1个月超级会员" title="查看福利">
 						<p class="txt">1个月超级会员</p>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 						<a class="recommend-item mouseover-shadow" href="#" target="_blank">
 							<h4 class="item-title">新手专享3个月</h4>
 							<div class="item-subject-rate">
-								<p class="big-text text-orange">11
+								<p class="big-text">11
 									<small class="fz18">% </small>
 								</p>
 								<p class="refer">参考年回报率</p>
@@ -131,7 +131,7 @@
 						<a class="recommend-item mouseover-shadow" href="#" target="_blank">
 							<h4 class="item-title">新手专享1个月</h4>
 							<div class="item-subject-rate">
-								<p class="big-text text-orange">11
+								<p class="big-text">10
 									<small class="fz18">% </small>
 								</p>
 								<p class="refer">参考年回报率</p>
@@ -156,7 +156,7 @@
 						<a class="recommend-item mouseover-shadow" href="#" target="_blank">
 							<h4 class="item-title">新手专享15天</h4>
 							<div class="item-subject-rate">
-								<p class="big-text text-orange">11
+								<p class="big-text">9
 									<small class="fz18">% </small>
 								</p>
 								<p class="refer">参考年回报率</p>
@@ -181,7 +181,7 @@
 						<a class="recommend-item mouseover-shadow" href="#" target="_blank">
 							<h4 class="item-title">We自助服务C</h4>
 							<div class="item-subject-rate">
-								<p class="big-text text-orange">11
+								<p class="big-text">11
 									<small class="fz18">% </small>
 								</p>
 								<p class="refer">参考年回报率</p>
@@ -226,39 +226,39 @@
 					</div>
 					<div class="rank advan-item" style="">
 						<div class="fz19 color-blue tit">前
-							<span class="fz42">10</span>
+							<span class="fz42 fb">10</span>
 						</div>
 						<p class="desc fz17 detail">网贷之家排名前十</p>
 					</div>
-					<div class="stock">
+					<div class="stock advan-item">
 						<div class="color-blue tit">
-							<span class="fz45">A</span>
+							<span class="fz45 fb">A</span>
 							<span class="fz24">股</span>
 						</div>
 						<p class="fz17 detail">上市公司战略合作</p>
 					</div>
-					<div class="grade">
+					<div class="grade advan-item">
 						<div class="color-blue text-center tit">
-							<span class="fz36">三级</span>
+							<span class="fz36 fb">三级</span>
 							<p class="fz24">等保</p>
 						</div>
 						<p class="detail fz17">信息安全等级保护三级认证</p>
 					</div>
-					<div class="num">
+					<div class="num advan-item">
 						<div class="fz19 color-blue text-center tit">
-							<span class="fz34">780</span>
+							<span class="fz34 fb">780</span>
 							<p class="fz20">万</p>
 						</div>
 						<p class="detail fz17">投资者信赖之选</p>
 					</div>
-					<div class="profess">
+					<div class="profess advan-item">
 						<div class="color-blue text-center tit">
 							<span class="fz26 fb">专业</span>
 							<p class="fz18">认证</p>
 						</div>
 						<p class="detail fz17">AAA级信用认证</p>
 					</div>
-					<div class="control">
+					<div class="control advan-item">
 						<div class="color-blue tit">
 							<span class="fz26 fb">严格</span>
 							<p class="fz18">风控</p>
@@ -497,12 +497,12 @@
 							</tr>
 							<tr>
 								<td>50000</td>
-								<td>≥5个月</td>
+								<td>≥6个月</td>
 								<td>300元京东卡</td>
 							</tr>
 							<tr>
 								<td>100000</td>
-								<td>≥5个月</td>
+								<td>≥6个月</td>
 								<td>800元京东卡</td>
 							</tr>
 						</tbody>
